--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ MedDRA_25_0_English
 medDRA_test.csv
 patient_safety.csv
 tpm_gtex_filter_samples.rds
+counts_gtex_filter_samples.rds
 
  # Example code in package build process
 *-Ex.R
