--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ tpm_gtex_filter_samples.rds
 counts_gtex_filter_samples.rds
 drug_ae_df.rds
 metadata_gtex_filter_samples.rds
+patient_safety_filtered.rds
 
  # Example code in package build process
 *-Ex.R
