--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 
 # User-specific files
 .Ruserdata
+
+#too big files
 drug_ae_list.rds
 drug_bank_1_5_8_df.RDS
 drugbank_5.1.8.db
@@ -24,6 +26,7 @@ counts_gtex_filter_samples.rds
 drug_ae_df.rds
 metadata_gtex_filter_samples.rds
 patient_safety_filtered.rds
+drug_ae_res.rds
 
  # Example code in package build process
 *-Ex.R
