--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,24 @@ results/alpaca/alpaca_core_gene_lists/
 results/alpaca/alpaca_run/
 results/alpaca/panda_long_outputs/
 results/alpaca/sex_specific_networks/
+src/vignettes
+src/210603_open_fda_download.sh
+src/220519_FDA_open_drug.sh
+src/220725_FDA_open_drug_long.sh
+src/221031_transfer_sex_diff_test.Rmd
+src/230105_lioness_function_script.R
+src/230105_lioness_function_script.sh
+src/230105_lioness_set_up.Rmd
+src/230105_lioness_set_up.html
+src/230106_lioness_tissue_runs.txt
+src/230112_lioness_function_script_smaller.R
+src/230112_lioness_function_script_smaller.sh
+src/230126_lioness_outputs_adjustment.Rmd
+src/230126_lioness_outputs_adjustment.html
+src/230130_differential_edges_testing.Rmd
+src/sex_bias_functions.R
+src/test_LV_differences.R
+
 
  # Example code in package build process
 *-Ex.R
